# aristotle

./: Cargo.toml  LICENSE  Readme.md  perf.data.old  tasks.txt
.gitea/workflows/: default.yml
aristotle/: Cargo.toml
aristotle/src/: main.rs  text.rs
aristotle_font/: Cargo.toml
aristotle_font/src/: builder.rs  font.rs  fonts.rs  handler.rs  indexer.rs  lib.rs  raster.rs  renderer.rs  typeset.rs
aristotle_font/src/fonts/: family.rs  index.rs
aristotle_font/src/raster/: builder.rs  draw.rs
epub/: Cargo.toml
epub/examples/: parse_book.rs
epub/src/: book.rs  content.rs  document.rs  element.rs  guide.rs  lib.rs  manifest.rs  metadata.rs  spine.rs
src/: app.rs  book.rs  book_handler.rs  buzz.rs  config.rs  content.rs  ct.rs  draw.rs  epub.rs  font.rs  ft.rs  main.rs  page.rs  paginate.rs  text.rs
src/draw/: builder.rs  canvas.rs  error.rs  image.rs  text.rs  widget.rs
src/epub/: book.rs  content.rs  content_old.rs  element.rs  error.rs  guide.rs  html.pest  html.rs  index.rs  manifest.rs  metadata.rs  spine.rs  zip.rs
src/font/: caret.rs  fonts.rs  geom.rs  raster.rs  typeset.rs
src/font/fonts/: face.rs  family.rs  index.rs  style.rs
src/font/raster/: builder.rs  draw.rs
src/text/: caret.rs  error.rs  geom.rs  typeset.rs
src/text/fonts/: face.rs  family.rs  index.rs
testfiles/epubs/: frankenstein.epub  pride_and_prejudice.epub
