[package]
name = "aristotle"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph_rasterizer = "0.1.8"
softbuffer = { version = "0.4.5", default-features = false, features = ["kms", "wayland"] }
ttf-parser = "0.24.1"
winit = { version = "0.30.5", default-features = false, features = ["rwh_06", "wayland"] }
