[package]
name = "aristotle"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.28"
ab_glyph_rasterizer = "0.1.8"
colored = "2.0"
rustybuzz = "0.18.0"
softbuffer = "0.4.5"
unicode-normalization = "0.1.23"
winit = {version = "0.30.5", default-features = false, features = ["wayland", "rwh_06"] }
