[package]
name = "aristotle"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph_rasterizer = "0.1.8"
dirs = "6.0"
pest = "2.7.15"
pest_derive = "2.7.15"
png = "0.17.16"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0.217", default-features = true, features = ["derive"] }
softbuffer = { version = "0.4.5", default-features = false, features = [
    "kms",
    "wayland",
] }
thiserror = "2.0.12"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3"
ttf-parser = "0.25"
winit = { version = "0.30.5", default-features = false, features = [
    "rwh_06",
    "wayland",
] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
