[package]
name = "aristotle"
version = "0.1.0"
edition = "2021"

[dependencies]
softbuffer = { version = "0.4.5", default-features = false, features = ["kms", "wayland"] }
winit = { version = "0.30.5", default-features = false, features = ["rwh_06", "wayland"] }

aristotle_font = { path = "../aristotle_font" }
epub = { path = "../epub" }
